--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     </header>
     <div class="caixaprincipal">
         <div class="caixa-dos-dados">
-           
-                <select id="valor">
+              <div class="selecoes">
+                  <img src="images/man_icon-icons.com_50102.ico">
+                <select id="valor" onchange="mudar()">
                     <option>Homem</option>
                     <option>Mulher</option>
                 </select>
-
+                  <img src="./images/woman_icon-icons.com_49954.png">
+               </div>
             <label>
                 sua idade : <br>
                 <input type="number" placeholder="Ex : 19">
