--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="caixa-dos-dados">
               <div class="selecoes">
                   <img src="images/man_icon-icons.com_50102.ico">
-                <select id="valor" onclick="mudar()">
+                <select id="valor" onchange="mudar()">
                     <option>Homem</option>
                     <option>Mulher</option>
                 </select>
